--- a/Xgboost.ipynb
+++ b/Xgboost.ipynb
@@ -1182,7 +1182,7 @@
     "\n",
     "4.\tI have done the hyperparameter tuning in XGBoost by doing k-fold cross-validation.\n",
     "\n",
-    "5.\tI find the most important feature in XGBoost to be `Grocey`. I did it using the **plot_importance()** function in XGBoost that helps us to achieve this task. \n"
+    "5.\tI find the most important feature in XGBoost to be `Grocery`. I did it using the **plot_importance()** function in XGBoost that helps us to achieve this task. \n"
    ]
   }
  ],
